@@ -2,6 +2,7 @@ find_package (Curses)
 add_subdirectory (counters)
 add_subdirectory (random)
 add_subdirectory (gyro)
+add_subdirectory (bitfields)
 add_subdirectory (discovery)
 if (CURSES_HAVE_CURSES_H)
   add_subdirectory (terminal)
