@@ -2,6 +2,8 @@ This is the C SDK for EdgeX. Its API is based largely on the Go SDK.
 
 Changes for 1.3.0 "Hanoi":
 
+- 'mask' valueproperty is passed as part of the command request. Drivers should
+  atomically perform a read-modify-write operation if this is nonzero. (See README.v2.md)
 - v2 API update: Callback added to inform the driver of a configuration update.
 - v2 API update: Implementations to supply default values for their configuration.
   - This allows use of numerics/boolean types as well as Strings.
